[tool.poetry]
name = "deploy-api"
version = "0.1.0"
description = "Testing Python deployment of AI"
authors = ["Bwalsh5  <bwalsh5@elon.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "deploy_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pynytimes = "^0.10.0"
openai = "^0.27.7"
fastapi-cache2 = "^0.2.1"
redis = "^4.5.5"

[tool.poetry.group.dev.dependencies]
httpx = "^0.24.1"
pytest = "^7.3.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
